--- a/login/templates/despacho_frigos.html
+++ b/login/templates/despacho_frigos.html
@@ -39,6 +39,25 @@
     {% endblock %}
 
     {% block extra_head %}{% endblock %}
+    <script type="text/javascript">
+        function getCookie(name) {
+            let cookieValue = null;
+            if (document.cookie && document.cookie !== '') {
+                const cookies = document.cookie.split(';');
+                for (let i = 0; i < cookies.length; i++) {
+                    const cookie = cookies[i].trim();
+                    // Does this cookie string begin with the name we want?
+                    if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                        cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                        break;
+                    }
+                }
+            }
+            return cookieValue;
+        }
+        const csrftoken = getCookie('csrftoken');
+    </script>
+    
 </head>
 
 <body class="hold-transition sidebar-mini {% block body_class %}{% block bodyclass %}{% endblock %}{% endblock %}">
@@ -94,30 +113,32 @@
                                     {% for despacho in despachos %}
                                     <tr>
                                         <td>{{ despacho.0 }}</td> <!-- ID del Despacho -->
-                                        <td>{{ despacho.2 }}</td> <!-- Nombre de la Granja -->
-                                        <td>{{ despacho.3 }}</td> <!-- Cantidad de Cerdos -->
-                                        <td>{{ despacho.5 }}</td> <!-- Nombre del Frigorífico -->
-                                        <td>{{ despacho.6 }}</td> <!-- Fecha de Pedido -->
-                                        <td>{{ despacho.7 }}</td> <!-- Observación -->
-                                        <td>{{ despacho.8 }}</td> <!-- Cerdos Sin Despachar -->
+                                        <td>{{ despacho.3 }}</td> <!-- Nombre de la Granja -->
+                                        <td>{{ despacho.4 }}</td> <!-- Cantidad de Cerdos -->
+                                        <td>{{ despacho.6 }}</td> <!-- Nombre del Frigorífico -->
+                                        <td>{{ despacho.7 }}</td> <!-- Fecha de Pedido -->
+                                        <td>{{ despacho.8 }}</td> <!-- Observación -->
+                                        <td>{{ despacho.9 }}</td> <!-- Cerdos Sin Despachar -->
 
                                         <!-- Despachar cerdos -->
                                         <td>
                                             <button class="btn btn-repor" data-toggle="modal"
                                                 data-target="#modalSalidasDespacho" data-id="{{ despacho.0 }}"
-                                                data-granja-id="{{ despacho.1 }}" data-frigorifico-id="{{ despacho.4 }}"
-                                                {% if despacho.8 <= 0 %} disabled {% endif %}>
+                                                data-consecutivo="{{ despacho.1 }}"
+                                                data-granja-id="{{ despacho.2 }}" data-frigorifico-id="{{ despacho.5 }}"
+                                                {% if despacho.9 <= 0 %} disabled {% endif %}>
                                                 <i class="fa-solid fa-truck"></i>
                                             </button>
                                         </td>
                                         <!-- Finalizar Registros -->
                                         <td>
-                                            {% if despacho.8 <= 0 %} <button class="btn btn-success" data-toggle="modal"
-                                                data-target="#finalizarModal" data-consecutivo="{{ despacho.0 }}">
+                                            {% if despacho.9 <= 0 %}
+                                            <button class="btn btn-success" data-toggle="modal" data-target="#finalizarModal" data-id="{{ despacho.0 }}">
                                                 Finalizar Registros
-                                                </button>
-                                                {% endif %}
+                                            </button>
+                                            {% endif %}
                                         </td>
+                                        
                                     </tr>
                                     {% endfor %}
                                 </tbody>
@@ -194,6 +215,11 @@
                                                 {% endfor %}
                                                 </select>
                                         </div>
+                                        <!-- Consecutivo Disponibilidad (Oculto) -->
+                                        
+                                        <input type="hidden" id="consecutivoDisponibilidad" name="consecutivoDisponibilidad"required readonly>
+                                        
+                                        
                                         <!-- Reg IC -->
                                         <div class="form-group">
                                             <label for="regic">Registro IC:</label>
@@ -259,8 +285,8 @@
 
 
                     <!-- Modal para finalizar registros -->
-                    <div class="modal fade" id="finalizarModal" tabindex="-1" role="dialog"
-                        aria-labelledby="finalizarModalLabel" aria-hidden="true">
+
+                    <div class="modal fade" id="finalizarModal" tabindex="-1" role="dialog" aria-labelledby="finalizarModalLabel" aria-hidden="true">
                         <div class="modal-dialog" role="document">
                             <div class="modal-content">
                                 <div class="modal-header">
@@ -273,14 +299,13 @@
                                     <p>¿Desea terminar los registros?</p>
                                 </div>
                                 <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary"
-                                        data-dismiss="modal">Cancelar</button>
-                                    <button type="button" class="btn btn-primary"
-                                        id="confirmarFinalizar">Aceptar</button>
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                                    <button type="button" class="btn btn-primary" id="confirmarFinalizar">Aceptar</button>
                                 </div>
                             </div>
                         </div>
                     </div>
+
                 </section>
             </div>
         </div>
@@ -296,9 +321,11 @@
                 // Detectar clic en los botones y pasar el id al modal
                 $('.btn-repor').on('click', function () {
                     var id = $(this).data('id');
+                    var consecutivoD = $(this).data('consecutivo'); 
                     var granjaId = $(this).data('granja-id');
                     var frigorificoId = $(this).data('frigorifico-id');
                     $('#consecutivoDespacho').val(id);
+                    $('#consecutivoDisponibilidad').val(consecutivoD);
                     $('#granja_id').val(granjaId);
                     $('#frigorifico_id').val(frigorificoId);
                 });
@@ -340,51 +367,42 @@
                 });
 
                 // Manejar la finalización de registros
-                var consecutivoDisponibilidad = null;  // Almacenar el consecutivo
+                var id = null;  // Almacenar el consecutivo
 
                 // Abrir modal de confirmación al hacer clic en "Finalizar Registros"
                 $('#finalizarModal').on('show.bs.modal', function (event) {
                     var button = $(event.relatedTarget); // Botón que disparó el modal
-                    consecutivoDisponibilidad = button.data('consecutivo'); // Extraer el consecutivo
+                    id = button.data('id'); // Extraer el consecutivo
                     console.log("Consecutivo para finalizar:", consecutivoDisponibilidad);  // Verificar el consecutivo extraído
                 });
 
                 // Confirmar finalización de registros con AJAX
                 $('#confirmarFinalizar').on('click', function () {
-                    console.log("Enviando solicitud AJAX para finalizar el registro con consecutivo:", consecutivoDisponibilidad);
-
+                    console.log("Enviando solicitud AJAX para finalizar el registro con ID:", id);
                     $.ajax({
-                        url: "/finalizar_registro/",  // URL de la vista que manejará la actualización
+                        url: "/finalizar_registro/",  // URL of your Django view
                         method: "POST",
                         data: {
-                            'consecutivoDisponibilidad': consecutivoDisponibilidad,  // Enviar el consecutivo
-                            'csrfmiddlewaretoken': '{{ csrf_token }}'  // Incluir el token CSRF aquí
+                            'id': id,  // Enviar el ID correcto
+                        },
+                        beforeSend: function (xhr) {
+                            xhr.setRequestHeader("X-CSRFToken", csrftoken);  // Enviar el token CSRF
                         },
                         success: function (response) {
-                            console.log("Respuesta del servidor:", response);
                             if (response.success) {
                                 alert('Registros finalizados con éxito.');
-                                $('#finalizarModal').modal('hide');  // Cerrar el modal de finalización
-                                location.reload();  // Recargar la página después del éxito
+                                $('#finalizarModal').modal('hide');
+                                location.reload();
                             } else {
                                 alert('Error al finalizar los registros: ' + response.error);
                             }
                         },
                         error: function (xhr, status, error) {
-                            console.error("Error en la solicitud AJAX:", error);
                             alert('Ocurrió un error al finalizar los registros.');
                         }
                     });
                 });
-                // Evento de cambio en el campo retiroalimento para formatear la fecha correctamente
-                document.getElementById('retiroalimento').addEventListener('change', function (e) {
-                    var input = e.target.value;
-                    // Reemplazar la 'T' con un espacio y agregar ':00' para los segundos
-                    var formattedValue = input.replace('T', ' ') + ':00';
-                    e.target.value = formattedValue;
-                });
 
-                
 
 
                 // Manejar el envío del formulario de despacho
